@@ -6,6 +6,7 @@ New in version 0.99.1 (XXX 2009)
  * Fix _amod, _predadj, _advmod order in the frame rules.
  * Fix lemma form of verb 's ("That's what the man said")
  * Fix handling of word subscripts, when subscripts are multi-letter.
+ * Fix OpenCog output for frame elements.
 
 New in version 0.99.0 (May 2009)
  * Fix/reverse the usage of the head-word in certain relations.
